# Artificial_Intelligence_Engineering

./: .gitignore  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW03/eda-cli/data/: example.csv
homeworks/HW03/eda-cli/reports_example/: report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  viz.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/api_reports/: report.md
homeworks/HW04/eda-cli/my_report/: report.md
homeworks/HW04/eda-cli/src/eda_cli/: __init__.py  api.py  core.py  test_api.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.csv  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv
homeworks/HW14/: HW14.ipynb  report.md
homeworks/HW14/artifacts/: rag_examples.csv  retrieval_eval.csv  (+1 more)
project/: .gitignore  Dockerfile  README.md  docker-compose.yml  report.md  requirements.txt  self-checklist.md
project/artifacts/: metrics.json  xgboost_model.pkl
project/configs/: .env.example  config.yaml
project/notebooks/: exp01_eda_baseline.ipynb
project/tests/: test_data_loading.py  test_model.py
(+6 files in other folders)
