[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-cli"
version = "0.1.0"
description = "CLI tool for Exploratory Data Analysis of CSV files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EDA CLI Team", email = "example@example.com"},
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "typer>=0.9.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"

[project.urls]
"Homepage" = "https://github.com/example/eda-cli"
"Bug Tracker" = "https://github.com/example/eda-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["eda_cli*"]