[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eda-cli"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "CLI tool for exploratory data analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "typer>=0.9.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.33.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/eda_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/eda_cli", "tests", "data", "pyproject.toml", "README.md"]
